[package]
name = "astolfo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "astolfo"
path = "src/astolfo.rs"

[[bin]]
name = "felix"
path = "src/felix.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "2.0.1"
reqwest = { version = "=0.10.10", features = ["blocking"]}
rand = "=0.9.2"
